Initial Commit after automated code Reformat and Migration to IntelliJ IDEA.
If you use IntelliJ note that you need to manually configure the needed listeners by following this path

Run/Debug Configurations > Edit Configurations... > Templates > TestNG > Configuration > Listeners > Add all SHAFT_Engine Listeners [AlterSuite, InvokedMethod, Suite]

Signed-off-by: Mohab Mohie <Mohab.MohieElDeen@outlook.com>